# mementocached

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  Readme.md  TODO.md  build.rs
.github/: test.yml
.github/workflows/: release.yml  test.yml
client/: Makefile  client.py
client/protos/: kv_pb2.py
protos/: kv.proto
src/: lib.rs
src/command/: connection.rs  mod.rs
src/connection/: mod.rs
src/metrics/: mod.rs
src/reader/: mod.rs
src/runtime/: core.rs  db.rs  mod.rs  socket.rs
