[package]
name = "asyncached"
version = "0.1.0"
authors = ["Nicolas Fraison <nfraison@yahoo.fr>"]
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
# Log
tracing = "0"
tracing-subscriber = "0"
# Prometheus
prometheus = { version = "0", features = ["process"] }
lazy_static = "1"
poem = "1"
# Debug
console-subscriber = "0"
# Other
argparse = "0"

[profile.release]
lto = true
