[package]
name = "mementocached"
version = "0.1.0"
authors = ["Nicolas Fraison <nfraison@yahoo.fr>"]
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
# Async
ahash = "0"
num_cpus = "1"
tokio = { version = "1", features = ["full"] }
# Protos
bytes = "1"
protobuf = { version = "3", features = ["with-bytes"] }
# Log
tracing = "0"
tracing-subscriber = "0"
# Prometheus
prometheus = { version = "0", features = ["process"] }
lazy_static = "1"
poem = "1"
# Debug
console-subscriber = "0"
async-backtrace = "0"
# Other
argparse = "0"
rand = "0"


[build-dependencies]
protobuf-codegen = "3"

[profile.release]
lto = true
